// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog /> should render a special dialog 1`] = `
<Modal>
  <Backdrop
    color="#000"
    duration={200}
    isVisible={true}
    level={0}
    onClick={[Function]}
    opacity={50}
  />
  <PipelineErrorDialog
    actions={Array []}
    message=""
    params={
      Object {
        "errorCode": "",
        "message": "",
        "pipelineName": "",
        "request": Object {},
      }
    }
  />
</Modal>
`;

exports[`<Dialog /> should render without props 1`] = `
<Modal>
  <Backdrop
    color="#000"
    duration={200}
    isVisible={true}
    level={0}
    onClick={[Function]}
    opacity={50}
  />
  <BasicDialog
    actions={Array []}
    message="msg"
    title={null}
  />
</Modal>
`;
